# python3-sdk

./: README.MD  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: main.yml  publish.yml
example/: context_event_logger_example.py  example.py
sdk/: absmarly.py  absmartly.py  absmartly_config.py  audience_deserializer.py  audience_matcher.py  client.py  client_config.py  context.py  context_config.py  context_data_deserializer.py  context_data_provider.py  context_event_handler.py  context_event_logger.py  context_event_serializer.py  default_audience_deserializer.py  default_context_data_deserializer.py  default_context_data_provider.py  default_context_event_handler.py  default_context_event_serializer.py  default_http_client.py  default_http_client_config.py  default_variable_parser.py  http_client.py  variable_parser.py
sdk/internal/: buffers.py  murmur32.py  variant_assigner.py
sdk/json/: attribute.py  context_data.py  custom_field_value.py  experiement_application.py  experiment.py  experiment_variant.py  exposure.py  goal_achievement.py  publish_event.py  unit.py
sdk/jsonexpr/: evaluator.py  expr_evaluator.py  json_expr.py  operator.py
sdk/time/: clock.py  fixed_clock.py  system_clock_utc.py
test/: test_buffers.py  test_client.py  test_context.py  test_default_audience_deserializer.py  test_default_context_data_deserializer.py  test_default_context_event_serializer.py  test_murmur32.py  test_variant_assigner.py
test/jsonexpr/: test_expr_evaluator.py  test_json_expr.py
test/res/: context.json
(+33 files in other folders)
